# XRFormer

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
datasets/XRF_pigments_checker_v5/: acrylic binder on cardboard.mca  alizarine.mca  arylide yellow.mca  azurite.mca  bitumen.mca  blue bice.mca  bone black.mca  burnt sienna.mca  burnt umber.mca  cadmium green.mca  cadmium red.mca  cadmium yellow.mca  cardboard.mca  carmine lake.mca  chalk.mca  chrome green.mca  chrome yellow.mca  cobalt blue.mca  cobalt cerulean blue.mca  cobalt chromite blue.mca  cobalt titanate green.mca  cobalt violet.mca  cobalt yellow.mca  curcuma.mca  egyptian blue.mca  gamboge.mca  gold.mca  green earth.mca  gypsum.mca  han blue.mca  indigo.mca  iron gall ink.mca  ivory black.mca  lac dye.mca  lamp black.mca  lead tin yellow I.mca  lead tin yellow II.mca  lead white.mca  lithopone.mca  madder lake.mca  (+35 more)
datasets/infraart/: BLK1005.CSV  BLK1025.CSV  BLK1050.CSV  BLK2075.CSV  BLK264764.CSV  BLK272073.CSV  BLK272080.CSV  BLK3062.CSV  BLK3070.CSV  BLK3160.CSV  BLK3170.CSV  BLK3320.CSV  BLK3920.CSV  BLK4155.CSV  BLK4160.CSV  BLK4250.CSV  BLK5070.CSV  BLK5080.CSV  BLK5140.CSV  BLK5160.CSV  BLK5180.CSV  BLK6005.CSV  BLK6010.CSV  BLK6075.CSV  BLK6090.CSV  BLK6095.CSV  BLK6340.CSV  BLK6930.CSV  BLK7010.CSV  BLK7030.CSV  BLK7140.CSV  BLK8230.CSV  BLK9001.CSV  BLK9100.CSV  BLK95607.CSV  BLKTR4000.CSV  CDORO001.csv  CDORO002.csv  CERTO001.csv  DIV258.csv  (+975 more)
experiments/: run_ablation.py
scripts/: generate_data.py  pretrain_ssl.py  train_downstream.py
src/xrf/: __init__.py  (+5 more)
