[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xrf"
version = "0.1.0"
description = "Code for XRFormer: Multiscale Tokenization for XRF Representation Learning"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "numpy",
    "scipy",
    "tqdm",
    "torcheval",
    "einops",
]

[tool.setuptools.packages.find]
where = ["src"]  # key: tells pip to look inside src/